--- a/plugins/spring/build.gradle
+++ b/plugins/spring/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 	compile "org.springframework:spring-context:$springVersion"
 	compile "org.springframework:spring-web:$springVersion"
 	compile "org.springframework:spring-webmvc:$springVersion"
+	compile "org.springframework:spring-websocket:$springVersion"
 
 	compile "commons-fileupload:commons-fileupload:1.3.1"
 	compile "org.codehaus.jackson:jackson-mapper-asl:1.9.5"
