Fix modelCreator for all collection implementation

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 ext {
-	releaseVersion = '1.1.1'
+	releaseVersion = '1.2.1'
 	snapshotVersion = '1.2.1-SNAPSHOT'
 	gwtVersion = '2.8.2'
-	guavaVersion = '18.0'
+	guavaVersion = '23.6-jre'
 	junitVersion = '4.11'
 	log4jVersion = '1.6.1'
 	slf4jVersion = '1.2.14'
